# eecs485-group

./: .gitignore  README.md  cookies.txt  resttest.sh
p2-insta485/: deployed_insta485.html  eecs485deploy.pem  output  pyproject.toml  requirements.txt
p3-insta485-clientside/: deployed_bundle.js  deployed_index.html  eecs485deploy.pem  (+2 more)
p4-mapreduce/: correct.txt  pyproject.toml  requirements.txt
p4-mapreduce/mapreduce/: __init__.py  submit.py
p4-mapreduce/mapreduce/manager/: __init__.py  __main__.py
p4-mapreduce/mapreduce/utils/: __init__.py  common_usage.py
p4-mapreduce/mapreduce/worker/: __main__.py
p4-mapreduce/output/: part-00000  part-00001  part-00002
p4-mapreduce/tests/: conftest.py  test_check_submission_files.py  test_integration_00.py  test_integration_01.py  test_integration_02.py  test_manager_00.py  test_manager_01.py  test_manager_02.py  test_manager_03.py  test_manager_05.py  test_style.py  test_worker_00.py  test_worker_01.py  test_worker_02.py  test_worker_03.py  test_worker_04.py  test_worker_05.py  test_worker_07.py  test_worker_08.py  test_worker_11.py
p4-mapreduce/tests/testdata/correct/: grep_correct.txt
p4-mapreduce/tests/testdata/exec/: grep_map.py  grep_reduce.py  wc_map.py  wc_map_slow.sh  wc_reduce.py  wc_reduce_slow.sh
p4-mapreduce/tests/testdata/input/: file02  file03  file04  file05  file06  file07  file08
p4-mapreduce/tests/testdata/input_large/: file01  file02  file03  file04
p4-mapreduce/tests/testdata/test_worker_07/: maptask00000-part00000  maptask00001-part00000
p4-mapreduce/tests/utils/: __init__.py  memory.py
(+112 files in other folders)
